<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <cnergee.sbbroadband.widgets.MyEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="@dimen/sub_hdr_size"
            app:fontName="@string/font_name"
            android:inputType="textEmailAddress"/>

        <cnergee.sbbroadband.widgets.MyEditText
            android:id="@+id/et_pass"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="@dimen/sub_hdr_size"
            app:fontName="@string/font_name"
            android:inputType="textPassword"/>

        <cnergee.sbbroadband.widgets.MyButton
            android:layout_marginTop="10dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:padding="10dp"
            app:fontName_button="@string/font_name"
            android:textColor="@android:color/white"
            android:background="@drawable/change_pckg_round"/>
    </LinearLayout>

</LinearLayout>