<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:textSize="@dimen/default_text_size"
                android:layout_height="wrap_content" />

            <cnergee.sbbroadband.widgets.MyEditText
                android:id="@+id/et_mobile"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mobile"
                android:gravity="left"
                android:singleLine="true"
                android:textSize="@dimen/sub_hdr_size"
                android:maxLength="10"
                app:fontName="@string/font_name"
                android:inputType="phone"/>
        </LinearLayout>

        <cnergee.sbbroadband.widgets.MyEditText
            android:id="@+id/et_otp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_otp"
            android:gravity="center"
            android:textSize="@dimen/sub_hdr_size"
            android:singleLine="true"
            app:fontName="@string/font_name"
            android:visibility="gone"
            android:inputType="text"/>


        <cnergee.sbbroadband.widgets.MyTextView
            android:id="@+id/tv_resend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/resend_otp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:visibility="gone"
            app:fontName="@string/font_name"/>

        <cnergee.sbbroadband.widgets.MyButton
            android:layout_marginTop="10dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:padding="10dp"
            app:fontName_button="@string/font_name"
            android:textColor="@android:color/white"
            android:background="@drawable/change_pckg_round"/>

        <cnergee.sbbroadband.widgets.MyButton
            android:layout_marginTop="10dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:id="@+id/btn_submit_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:padding="10dp"
            android:visibility="gone"
            app:fontName_button="@string/font_name"
            android:textColor="@android:color/white"
            android:background="@drawable/change_pckg_round"/>
    </LinearLayout>
</RelativeLayout>